--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,6 +34,9 @@ html(lang="zh-CN")
               li: a(href='/select-movies')
                 i.fas.fa-star
                 | 去评分
+              li: a.recommend-nav(href='/recommendmovieforuser')
+                i.fas.fa-magic
+                | 个性化推荐
 
         .auth-buttons
           if isLogin
@@ -67,6 +70,7 @@ html(lang="zh-CN")
             if isLogin
               a(href='/favorites') 我的收藏
               a(href='/myratings') 我的评分
+              a(href='/recommendmovieforuser') 个性化推荐
 
           .link-group
             h4 帮助
